# ws_test

./: .gitignore  Makefile  README.md  build.sh  config.example.go  config.json  debug_node.sh  example.cpp  go.mod  libsimple.h  main.go  main_with_reconnect.go  run.sh  simple_client.go  simple_test  simple_test.cpp  subscribe_sigc.sh  test_simple.go  websocket_client.go
cpp/: config.json
docs/: API文档.md  websocket_fast_reconnect_design.md  一机一密校验方案.md  设备长链接获取.md
go/: build.sh  websocket_client.go
ros2/: CMakeLists.txt  build.sh  package.xml  run.sh
ros2/install/: local_setup.sh  setup.sh
ros2/install/websocket_client_ros/lib/websocket_client_ros/: websocket_node
ros2/install/websocket_client_ros/share/websocket_client_ros/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2/install/websocket_client_ros/share/websocket_client_ros/cmake/: websocket_client_rosConfig.cmake
ros2/install/websocket_client_ros/share/websocket_client_ros/launch/: websocket.launch.py
ros2/log/: latest_build
ros2/src/: websocket_node.cpp
ros2_ws/: build_ros.sh  listen_messages.sh  run_node.sh  subscribe_sigc.sh
ros2_ws/src/websocket_client_ros/: CMakeLists.txt  package.xml
ros2_ws/src/websocket_client_ros/launch/: websocket.launch.py
ros2_ws/src/websocket_client_ros/src/: websocket_client.h  websocket_node.cpp
websocket/: build.sh  run.sh
websocket/cpp/: Makefile
websocket/ros2_ws/: README.md  build_ros.sh  run_node.sh
websocket/ros2_ws/src/homi_speech_interface/: CMakeLists.txt  package.xml
websocket/ros2_ws/src/homi_speech_interface/srv/: SIGCData.srv
websocket/ros2_ws/src/websocket_client_ros/: CMakeLists.txt
websocket/ros2_ws/src/websocket_client_ros/config/: config.json
websocket/ros2_ws/src/websocket_client_ros/include/: libwebsocket_client.h
websocket/ros2_ws/src/websocket_client_ros/src/: websocket_node.cpp
webstransport/: README.md  build.sh  run.sh
webstransport/clib/: build.sh  webtransport_client.go
webstransport/client/: config.json  config.local.json  config.remote.json  main.go
webstransport/cpp/lib/x86_64/: libwebtransport_client.h
webstransport/ros2_ws/: send_unreliable.sh  subscribe.sh
webstransport/ros2_ws/src/webtransport_client_ros/include/: webtransport_client.h
webstransport/server/: cert.pem  key.pem  main.go
webtransport/: gen_cert.sh  go.mod  run.sh
webtransport/clib/: build.sh  webtransport_client.go
webtransport/client/: main.go
webtransport/cpp/: Makefile
webtransport/cpp/include/: webtransport_client.h
webtransport/ros2_ws/: README.md  build_ros.sh  reconnect.sh  run_node.sh  send_reliable.sh
webtransport/ros2_ws/src/webtransport_client_ros/: CMakeLists.txt  package.xml
webtransport/ros2_ws/src/webtransport_client_ros/launch/: webtransport.launch.py
webtransport/ros2_ws/src/webtransport_client_ros/src/: webtransport_node.cpp
webtransport/server/: main.go
